--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "/pocketbase/pb_data/types.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
