--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "additional.d.ts",
     "/pocketbase/pb_data/types.d.ts"
   ],
   "exclude": ["node_modules"]
